ADD : Dark Mode를 위한 색 추가

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="right_red">#C54245</color>
+    <color name="black">@color/white</color>
+    <color name="light_grey">#323232</color>
 </resources>
