--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="weather"
+            type="kr.hs.dgsw.idus_assignment.model.data.WeatherInfo" />
     </data>
 
     <LinearLayout
@@ -18,20 +21,23 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_local"
                 android:layout_width="55dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_item"
-                android:gravity="center"
                 android:paddingStart="10dp"
+                android:textAlignment="center"
                 android:paddingTop="40dp"
                 android:paddingEnd="10dp"
                 android:paddingBottom="40dp"
+                android:text="@{weather.country}"
                 android:textSize="11sp"
                 tools:text="Seoul" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:background="@drawable/background_stroke"
                 android:layout_weight="1"
                 android:padding="10dp">
 
@@ -39,7 +45,6 @@
                     android:id="@+id/iv_icon_today"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:layout_gravity="center"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -50,7 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:gravity="bottom|start"
+                    android:text="@{weather.today.weatherStateName}"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +67,6 @@
                     android:id="@+id/tv_temperature_today"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="top|start"
                     android:textColor="@color/right_red"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_icon_today"
@@ -73,7 +77,6 @@
                     android:id="@+id/tv_humidity_today"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="top|start"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_icon_today"
@@ -83,8 +86,9 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:background="@drawable/background_stroke"
                 android:layout_weight="1"
                 android:padding="10dp">
 
@@ -92,7 +96,6 @@
                     android:id="@+id/iv_icon_tomorrow"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:layout_gravity="center"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -103,7 +106,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:gravity="bottom|start"
+                    android:text="@{weather.nextDay.weatherStateName}"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -115,7 +118,6 @@
                     android:id="@+id/tv_temperature_tomorrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="top|start"
                     android:textColor="@color/right_red"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_icon_tomorrow"
@@ -126,7 +128,6 @@
                     android:id="@+id/tv_humidity_tomorrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="top|start"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_icon_tomorrow"
