ADD : BindingAdapter를 통한 Image처리

--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -8,6 +8,10 @@
         <variable
             name="weather"
             type="kr.hs.dgsw.idus_assignment.model.data.WeatherInfo" />
+
+        <variable
+            name="constants"
+            type="kr.hs.dgsw.idus_assignment.util.Constants" />
     </data>
 
     <LinearLayout
@@ -45,6 +49,7 @@
                     android:id="@+id/iv_icon_today"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
+                    imageSrc="@{weather.today.weatherStateAbbr}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -78,11 +83,12 @@
                     android:id="@+id/tv_humidity_today"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{Integer.toString(weather.today.humidity) + '%'}"
                     android:textColor="@color/black"
                     android:textSize="14sp"
-                    android:text="@{Integer.toString(weather.today.humidity) + '%'}"
+                    android:layout_marginStart="10dp"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_icon_today"
-                    app:layout_constraintEnd_toEndOf="@+id/tv_weather_state_today"
+                    app:layout_constraintStart_toEndOf="@+id/tv_temperature_today"
                     tools:text="68%" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -98,6 +104,7 @@
                     android:id="@+id/iv_icon_tomorrow"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
+                    imageSrc="@{weather.nextDay.weatherStateAbbr}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -131,11 +138,12 @@
                     android:id="@+id/tv_humidity_tomorrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{Integer.toString(weather.nextDay.humidity) + '%'}"
                     android:textColor="@color/black"
                     android:textSize="14sp"
-                    android:text="@{Integer.toString(weather.nextDay.humidity) + '%'}"
+                    android:layout_marginStart="10dp"
                     app:layout_constraintBottom_toBottomOf="@+id/iv_icon_tomorrow"
-                    app:layout_constraintEnd_toEndOf="@+id/tv_weather_state_tomorrow"
+                    app:layout_constraintStart_toEndOf="@+id/tv_temperature_tomorrow"
                     tools:text="68%" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
