--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,8 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="@{vm.isLoading ? View.INVISIBLE : View.VISIBLE}"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="@{vm.isLoading ? View.INVISIBLE : View.VISIBLE}">
 
             <TextView
                 android:layout_width="match_parent"
@@ -35,54 +35,11 @@
                 android:textSize="28sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal"
-                android:paddingHorizontal="10dp">
-
-                <TextView
-                    android:layout_width="55dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/background_item"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="@string/text_local"
-                    android:textColor="@color/black"
-                    android:textSize="11sp" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/background_item"
-                    android:gravity="center"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:text="@string/text_today_weather"
-                    android:textColor="@color/black"
-                    android:textSize="11sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/background_item"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="@string/text_tomorrow_weather"
-                    android:textColor="@color/black"
-                    android:textSize="11sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:id="@+id/swipe_refresh_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
+                android:layout_marginTop="20dp"
                 android:paddingHorizontal="10dp"
                 android:paddingBottom="10dp">
 
@@ -90,7 +47,7 @@
                     android:id="@+id/rv_weather"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     tools:listitem="@layout/item_weather" />
 
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
